; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/ipmi/extr_ipmi_si_intf.c_port_outb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/ipmi/extr_ipmi_si_intf.c_port_outb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.si_sm_io = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.si_sm_io*, i32, i8)* @port_outb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @port_outb(%struct.si_sm_io* %0, i32 %1, i8 zeroext %2) #0 {
  %4 = alloca %struct.si_sm_io*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8, align 1
  %7 = alloca i32, align 4
  store %struct.si_sm_io* %0, %struct.si_sm_io** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8 %2, i8* %6, align 1
  %8 = load %struct.si_sm_io*, %struct.si_sm_io** %4, align 8
  %9 = getelementptr inbounds %struct.si_sm_io, %struct.si_sm_io* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %7, align 4
  %11 = load i8, i8* %6, align 1
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.si_sm_io*, %struct.si_sm_io** %4, align 8
  %15 = getelementptr inbounds %struct.si_sm_io, %struct.si_sm_io* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = mul i32 %13, %16
  %18 = add i32 %12, %17
  %19 = call i32 @outb(i8 zeroext %11, i32 %18)
  ret void
}

declare dso_local i32 @outb(i8 zeroext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
